feat(synchronize): Init
Signed-off-by: jld3103 <jld3103yt@gmail.com>

--- a/commitlint.yaml
+++ b/commitlint.yaml
@@ -35,5 +35,6 @@ rules:
       - notifications_push_repository
       - release
       - sort_box
+      - synchronize
       - talk_app
       - tool
