--- a/packages/neon_framework/packages/neon_storage/pubspec_overrides.yaml
+++ b/packages/neon_framework/packages/neon_storage/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: neon_lints,cookie_store,cookie_store_conformance_tests,dynamite_runtime,nextcloud
+# melos_managed_dependency_overrides: cookie_store,cookie_store_conformance_tests,dynamite_runtime,neon_lints,nextcloud
 dependency_overrides:
   cookie_store:
     path: ../../../cookie_store
