--- a/packages/neon_framework/pubspec.yaml
+++ b/packages/neon_framework/pubspec.yaml
@@ -68,6 +68,10 @@ dependencies:
   sqflite: ^2.3.0
   sqflite_common_ffi: ^2.3.2
   sqflite_common_ffi_web: ^0.4.2+3
+  synchronize:
+    git:
+      url: https://github.com/nextcloud/neon
+      path: packages/neon_framework/packages/synchronize
   timezone: ^0.9.4
   unifiedpush: ^5.0.0
   unifiedpush_android: ^2.0.0
