--- a/packages/neon_framework/example/pubspec_overrides.yaml
+++ b/packages/neon_framework/example/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,news_app,nextcloud,notes_app,notifications_app,sort_box,talk_app
+# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,news_app,nextcloud,notes_app,notifications_app,sort_box,synchronize,talk_app
 dependency_overrides:
   account_repository:
     path: ../packages/account_repository
@@ -28,5 +28,7 @@ dependency_overrides:
     path: ../packages/notifications_app
   sort_box:
     path: ../packages/sort_box
+  synchronize:
+    path: ../packages/synchronize
   talk_app:
     path: ../packages/talk_app
