--- a/packages/neon_framework/packages/dashboard_app/pubspec_overrides.yaml
+++ b/packages/neon_framework/packages/dashboard_app/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,nextcloud,sort_box
+# melos_managed_dependency_overrides: account_repository,cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,nextcloud,sort_box,synchronize
 dependency_overrides:
   account_repository:
     path: ../account_repository
@@ -18,3 +18,5 @@ dependency_overrides:
     path: ../../../nextcloud
   sort_box:
     path: ../sort_box
+  synchronize:
+    path: ../synchronize
