--- a/packages/neon_framework/packages/files_app/pubspec.yaml
+++ b/packages/neon_framework/packages/files_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   go_router: ^14.0.0
   image_picker: ^1.0.0
   intl: ^0.19.0
+  json_annotation: ^4.8.1
   logging: ^1.0.0
   meta: ^1.0.0
   neon_framework:
@@ -30,16 +31,19 @@ dependencies:
   open_filex: ^4.4.0
   path: ^1.0.0
   path_provider: ^2.0.0
+  permission_handler: ^11.0.0
   queue: ^3.0.0
   rxdart: ^0.28.0
   share_plus: ^10.0.0
   timezone: ^0.9.4
   universal_io: ^2.0.0
+  watcher: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.13
   custom_lint: ^0.6.8
   go_router_builder: ^2.7.1
+  json_serializable: ^6.8.0
   neon_lints:
     git:
       url: https://github.com/nextcloud/neon
