--- a/packages/neon_framework/example/pubspec.yaml
+++ b/packages/neon_framework/example/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 
 dependencies:
   built_collection: ^5.0.0
+  cookbook_app:
+    git:
+      url: https://github.com/nextcloud/neon
+      path: packages/neon_framework/packages/cookbook_app
   dashboard_app:
     git:
       url: https://github.com/nextcloud/neon
