--- a/packages/neon_framework/example/pubspec_overrides.yaml
+++ b/packages/neon_framework/example/pubspec_overrides.yaml
@@ -1,7 +1,9 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,news_app,nextcloud,notes_app,notifications_app,sort_box,talk_app
+# melos_managed_dependency_overrides: account_repository,cookbook_app,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,news_app,nextcloud,notes_app,notifications_app,sort_box,talk_app
 dependency_overrides:
   account_repository:
     path: ../packages/account_repository
+  cookbook_app:
+    path: ../packages/cookbook_app
   cookie_store:
     path: ../../cookie_store
   dashboard_app:
