--- a/packages/neon_framework/packages/cookbook_app/pubspec.yaml
+++ b/packages/neon_framework/packages/cookbook_app/pubspec.yaml
@@ -7,7 +7,12 @@ environment:
   flutter: ^3.22.0
 
 dependencies:
+  bloc: ^8.0.0
   built_collection: ^5.0.0
+  cookbook_recipe_repository:
+    git:
+      url: https://github.com/nextcloud/neon
+      path: packages/neon_framework/packages/cookbook_recipe_repository
   equatable: ^2.0.0
   flutter:
     sdk: flutter
@@ -22,7 +27,8 @@ dependencies:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/neon_framework
-  nextcloud: ^6.1.0
+  nextcloud: ^7.0.0
+  vector_graphics: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.4.11
