--- a/packages/neon_framework/packages/cookbook_app/pubspec_overrides.yaml
+++ b/packages/neon_framework/packages/cookbook_app/pubspec_overrides.yaml
@@ -1,7 +1,9 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,nextcloud,sort_box
+# melos_managed_dependency_overrides: account_repository,cookbook_recipe_repository,cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,nextcloud,sort_box
 dependency_overrides:
   account_repository:
     path: ../account_repository
+  cookbook_recipe_repository:
+    path: ../cookbook_recipe_repository
   cookie_store:
     path: ../../../cookie_store
   dynamite_runtime:
