--- a/packages/neon_framework/pubspec.yaml
+++ b/packages/neon_framework/pubspec.yaml
@@ -50,10 +50,13 @@ dependencies:
   neon_http_client:
     git:
       url: https://github.com/nextcloud/neon
-      path: packages/neon_http_client
+      path: packages/neon_framework/packages/neon_http_client
+  neon_storage:
+    git:
+      url: https://github.com/nextcloud/neon
+      path: packages/neon_framework/packages/neon_storage
   nextcloud: ^8.0.0
   package_info_plus: ^8.0.0
-  path: ^1.0.0
   path_provider: ^2.1.0
   permission_handler: ^11.0.0
   provider: ^6.0.0
@@ -65,9 +68,6 @@ dependencies:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/neon_framework/packages/sort_box
-  sqflite: ^2.3.0
-  sqflite_common_ffi: ^2.3.2
-  sqflite_common_ffi_web: ^0.4.2+3
   timezone: ^0.9.4
   unifiedpush: ^5.0.0
   unifiedpush_android: ^2.0.0
