--- a/packages/neon_framework/pubspec_overrides.yaml
+++ b/packages/neon_framework/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,cookie_store_conformance_tests,dynamite_runtime,interceptor_http_client,neon_http_client,neon_lints,nextcloud,sort_box
+# melos_managed_dependency_overrides: account_repository,cookie_store,cookie_store_conformance_tests,dynamite_runtime,interceptor_http_client,neon_http_client,neon_lints,neon_storage,nextcloud,sort_box
 dependency_overrides:
   account_repository:
     path: packages/account_repository
@@ -14,6 +14,8 @@ dependency_overrides:
     path: packages/neon_http_client
   neon_lints:
     path: ../neon_lints
+  neon_storage:
+    path: packages/neon_storage
   nextcloud:
     path: ../nextcloud
   sort_box:
