--- a/packages/neon_framework/packages/notifications_app/pubspec.yaml
+++ b/packages/neon_framework/packages/notifications_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.12
+  built_value: ^8.9.2
   custom_lint: ^0.6.7
   flutter_test:
     sdk: flutter
