--- a/packages/neon_framework/packages/account_repository/pubspec.yaml
+++ b/packages/neon_framework/packages/account_repository/pubspec.yaml
@@ -5,7 +5,6 @@ publish_to: none
 
 environment:
   sdk: ^3.0.0
-  flutter: ^3.22.0
 
 dependencies:
   built_collection: ^5.1.1
@@ -17,24 +16,24 @@ dependencies:
   crypto: ^3.0.3
   equatable: ^2.0.5
   http: ^1.2.2
+  logging: ^1.2.0
   meta: ^1.0.0
-  neon_framework:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework
   neon_http_client:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/neon_framework/packages/neon_http_client
+  neon_storage:
+    git:
+      url: https://github.com/nextcloud/neon
+      path: packages/neon_framework/packages/neon_storage
   nextcloud: ^8.0.0
   rxdart: ^0.28.0
+  sqflite_common: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.4.12
   built_value_generator: ^8.9.2
   built_value_test: ^8.9.2
-  flutter:
-    sdk: flutter
   mocktail: ^1.0.4
   neon_lints:
     git:
