--- a/packages/neon_framework/packages/account_repository/pubspec_overrides.yaml
+++ b/packages/neon_framework/packages/account_repository/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,neon_storage,nextcloud,sort_box
+# melos_managed_dependency_overrides: cookie_store,dynamite_runtime,interceptor_http_client,neon_http_client,neon_lints,neon_storage,nextcloud
 dependency_overrides:
   cookie_store:
     path: ../../../cookie_store
@@ -6,8 +6,6 @@ dependency_overrides:
     path: ../../../dynamite/packages/dynamite_runtime
   interceptor_http_client:
     path: ../../../interceptor_http_client
-  neon_framework:
-    path: ../..
   neon_http_client:
     path: ../neon_http_client
   neon_lints:
@@ -16,5 +14,3 @@ dependency_overrides:
     path: ../neon_storage
   nextcloud:
     path: ../../../nextcloud
-  sort_box:
-    path: ../sort_box
