--- a/packages/neon_framework/packages/account_repository/pubspec.yaml
+++ b/packages/neon_framework/packages/account_repository/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   built_collection: ^5.1.1
   built_value: ^8.9.2
+  cookie_store:
+    git:
+      url: https://github.com/nextcloud/neon
+      path: packages/cookie_store
   crypto: ^3.0.3
   equatable: ^2.0.5
   http: ^1.2.2
