--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -19,6 +19,7 @@ jobs:
         with:
           filters: |
             src:
+              - .github/workflows/**
               - external/**
               - tool/**
               - packages/dynamite/**
@@ -89,7 +90,7 @@ jobs:
 
       # Use https://github.com/kislyuk/yq
       - name: Install yq
-        run: pip install yq
+        run: pip install yq --break-system-packages
 
       - name: Generate specs
         run: |
