--- a/packages/dynamite/packages/dynamite_runtime/pubspec.yaml
+++ b/packages/dynamite/packages/dynamite_runtime/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dynamite_runtime
 description: The helper package used at runtime by code generated with the OpenAPI generator dynamite.
-version: 0.5.0
+version: 0.5.0+1
 homepage: https://github.com/nextcloud/neon
 repository: https://github.com/nextcloud/neon/tree/main/packages/dynamite/packages/dynamite_runtime
 topics:
