--- a/packages/neon_framework/packages/files_app/pubspec.yaml
+++ b/packages/neon_framework/packages/files_app/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   built_collection: ^5.0.0
   collection: ^1.0.0
-  dynamite_runtime: ^0.5.0
+  dynamite_runtime: ^0.5.0+1
   file_picker: ^8.0.0+1
   filesize: ^2.0.0
   flutter:
@@ -26,7 +26,7 @@ dependencies:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/neon_framework
-  nextcloud: ^7.0.0
+  nextcloud: ^8.0.0
   open_filex: ^4.4.0
   path: ^1.0.0
   path_provider: ^2.0.0
