--- a/packages/neon_framework/pubspec.yaml
+++ b/packages/neon_framework/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   crypton: ^2.0.0
   cupertino_icons: ^1.0.0 # Do not remove this, is it needed on iOS/macOS. It will not include icons on other platforms because Apple forbids it.
   dynamic_color: ^1.0.0
-  dynamite_runtime: ^0.5.0
+  dynamite_runtime: ^0.5.0+1
   emoji_picker_flutter: ^3.0.0
   equatable: ^2.0.0
   file_picker: ^8.0.0+1
@@ -51,7 +51,7 @@ dependencies:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/neon_http_client
-  nextcloud: ^7.0.0
+  nextcloud: ^8.0.0
   package_info_plus: ^8.0.0
   path: ^1.0.0
   path_provider: ^2.1.0
