--- a/packages/nextcloud/pubspec.yaml
+++ b/packages/nextcloud/pubspec.yaml
@@ -1,5 +1,5 @@
 name: nextcloud
-version: 7.0.0
+version: 8.0.0
 description: A Nextcloud API client written in Dart supporting all maintained Nextcloud server versions.
 homepage: https://github.com/nextcloud/neon
 repository: https://github.com/nextcloud/neon/tree/main/packages/nextcloud
@@ -17,7 +17,7 @@ dependencies:
   collection: ^1.0.0
   crypto: ^3.0.0
   crypton: ^2.0.0
-  dynamite_runtime: ^0.5.0
+  dynamite_runtime: ^0.5.0+1
   http: ^1.2.0
   logging: ^1.0.0
   meta: ^1.0.0
@@ -35,7 +35,7 @@ dev_dependencies:
   built_value_test: ^8.9.2
   code_builder: ^4.10.0
   dart_style: ^2.3.7
-  dynamite: ^0.5.0
+  dynamite: ^0.5.0+1
   glob: ^2.1.2
   http_client_conformance_tests:
     git:
