--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -25,6 +25,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db # v3
+      - name: Install SQLite
+        run: sudo apt-get update && sudo apt-get install libsqlite3-0 libsqlite3-dev -y --no-install-recommends
 
       - name: Install dart
         uses: dart-lang/setup-dart@0a8a0fc875eb934c15d08629302413c671d3f672 # v1
