--- a/packages/neon_framework/pubspec_overrides.yaml
+++ b/packages/neon_framework/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,cookie_store_conformance_tests,dynamite_runtime,interceptor_http_client,neon_http_client,neon_lints,nextcloud,sort_box
+# melos_managed_dependency_overrides: account_repository,cookie_store,cookie_store_conformance_tests,dynamite_runtime,interceptor_http_client,neon_http_client,neon_lints,nextcloud,notifications_push_repository,sort_box
 dependency_overrides:
   account_repository:
     path: packages/account_repository
@@ -16,5 +16,7 @@ dependency_overrides:
     path: ../neon_lints
   nextcloud:
     path: ../nextcloud
+  notifications_push_repository:
+    path: packages/notifications_push_repository
   sort_box:
     path: packages/sort_box
