--- a/packages/neon_framework/example/pubspec_overrides.yaml
+++ b/packages/neon_framework/example/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,news_app,nextcloud,notes_app,notifications_app,sort_box,talk_app
+# melos_managed_dependency_overrides: account_repository,cookie_store,dashboard_app,dynamite_runtime,files_app,interceptor_http_client,neon_framework,neon_http_client,neon_lints,news_app,nextcloud,notes_app,notifications_app,notifications_push_repository,sort_box,talk_app
 dependency_overrides:
   account_repository:
     path: ../packages/account_repository
@@ -26,6 +26,8 @@ dependency_overrides:
     path: ../packages/notes_app
   notifications_app:
     path: ../packages/notifications_app
+  notifications_push_repository:
+    path: ../packages/notifications_push_repository
   sort_box:
     path: ../packages/sort_box
   talk_app:
