--- a/packages/neon_framework/packages/account_repository/pubspec_overrides.yaml
+++ b/packages/neon_framework/packages/account_repository/pubspec_overrides.yaml
@@ -1,4 +1,4 @@
-# melos_managed_dependency_overrides: cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,nextcloud,sort_box
+# melos_managed_dependency_overrides: cookie_store,dynamite_runtime,interceptor_http_client,neon_framework,neon_http_client,neon_lints,nextcloud,notifications_push_repository,sort_box
 dependency_overrides:
   cookie_store:
     path: ../../../cookie_store
@@ -14,5 +14,7 @@ dependency_overrides:
     path: ../../../neon_lints
   nextcloud:
     path: ../../../nextcloud
+  notifications_push_repository:
+    path: ../notifications_push_repository
   sort_box:
     path: ../sort_box
