--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -63,11 +63,9 @@ jobs:
           cp packages/neon_framework/example/build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk app-armeabi-v7a-debug.apk
           cp packages/neon_framework/example/build/app/outputs/flutter-apk/app-x86_64-release.apk app-x86_64-debug.apk
 
-          sudo add-apt-repository ppa:fdroid/fdroidserver
-          sudo apt-get update
-          sudo apt-get install apksigner fdroidserver python3-pip --no-install-recommends
-          sudo apt-get purge fdroidserver
-          pip3 install https://gitlab.com/fdroid/fdroidserver/-/archive/9684eade0dda3663f5fb68ca02b06f7b0bb7c086/fdroidserver.tar.gz
+          sudo apt-get update && sudo apt-get install apksigner python3-pip --no-install-recommends
+          python -m venv venv && source venv/bin/activate
+          pip install https://gitlab.com/fdroid/fdroidserver/-/archive/9684eade0dda3663f5fb68ca02b06f7b0bb7c086/fdroidserver.tar.gz
           export DEBUG_KEYSTORE=${{ secrets.DEBUG_KEYSTORE }}
           GITHUB_REPOSITORY=provokateurin/nextcloud-neon fdroid nightly -v --archive-older 10
 
