chore: Use more precise analyzer excludes
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/analysis_options.yaml
+++ b/packages/neon_framework/analysis_options.yaml
@@ -2,7 +2,7 @@ include: package:neon_lints/flutter.yaml
 
 analyzer:
   exclude:
-    - '**/router.g.dart'
+    - 'lib/src/router.g.dart'
 
 custom_lint:
   rules:
