--- a/.github/workflows/update_presets.yaml
+++ b/.github/workflows/update_presets.yaml
@@ -30,4 +30,6 @@ jobs:
           branch: chore/nextcloud_test/update-presets
           delete-branch: true
           title: "chore(nextcloud_test): Update presets"
-          body: "Make sure to update the supported apps table if a new preset is added!"
+          body: |
+            Make sure to update the supported apps table if a new preset is added!
+            `git checkout chore/nextcloud_test/update-presets && git commit --amend -s --no-edit && git push -f` locally to trigger the CI.
