fix(neon_http_client): Make authorization throttling less agressive
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/packages/neon_http_client/pubspec.yaml
+++ b/packages/neon_framework/packages/neon_http_client/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
       url: https://github.com/nextcloud/neon
       path: packages/cookie_store
   http: ^1.0.0
+  http_parser: ^4.0.0
   interceptor_http_client:
     git:
       url: https://github.com/nextcloud/neon
