--- a/packages/nextcloud/packages/nextcloud_test/pubspec.yaml
+++ b/packages/nextcloud/packages/nextcloud_test/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   built_collection: ^5.1.1
+  collection: ^1.0.0
   cookie_store:
     git:
       url: https://github.com/nextcloud/neon
@@ -17,6 +18,7 @@ dependencies:
     git:
       url: https://github.com/nextcloud/neon
       path: packages/interceptor_http_client
+  matcher: ^0.12.0
   meta: ^1.0.0
   nextcloud: ^8.1.0
   path: ^1.9.0
@@ -25,6 +27,7 @@ dependencies:
   test_api: ^0.7.0
   universal_io: ^2.0.0
   version: ^3.0.0
+  xml: ^6.0.0
 
 dev_dependencies:
   neon_lints:
