fix(tool): Group custom_lint packages in renovate config
Signed-off-by: Nikolas Rimikis <leptopoda@users.noreply.github.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -58,6 +58,13 @@
       "matchPackageNames": ["/^built/"]
     },
     {
+      "groupName": "custom_lint",
+      "matchPackageNames": [
+        "custom_lint",
+        "custom_lint_builder"
+      ]
+    },
+    {
       "groupName": "go_router",
       "matchPackageNames": ["/^go_router/"]
     },
