--- a/commitlint.yaml
+++ b/commitlint.yaml
@@ -25,6 +25,7 @@ rules:
       - neon_http_client
       - neon_lints
       - neon_lints_test
+      - neon_rich_text
       - neon_storage
       - news_app
       - nextcloud
