build!: Migrate to pub workspace
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.github/workflows/conventional_commits.yaml
+++ b/.github/workflows/conventional_commits.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           sdk: 3.7
       - name: Install commitlint_cli
-        run: dart pub get
+        run: dart pub global activate commitlint_cli 0.8.1
 
       - name: Lint conventional commits
-        run: dart run commitlint_cli --from=${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to=${{ github.event.pull_request.head.sha }}
+        run: dart pub global run commitlint_cli --from=${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to=${{ github.event.pull_request.head.sha }}
