--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -48,7 +48,7 @@ jobs:
         if: ${{ matrix.dependencies == 'downgrade' }}
         run: |
           git apply .github/workflows/dependency_overrides.patch
-          melos exec dart pub downgrade
+          fvm dart pub downgrade
       - name: Check formatting
         run: melos run format:check
       - name: Lint code
