--- a/packages/dynamite/example/pubspec.yaml
+++ b/packages/dynamite/example/pubspec.yaml
@@ -2,9 +2,10 @@ name: dynamite_petstore_example
 description: An example showing how to use dynamite for the Petstore example API.
 version: 1.0.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   built_collection: ^5.0.0
@@ -19,6 +20,4 @@ dev_dependencies:
   built_value_generator: ^8.9.5
   dynamite: ^0.5.0+1
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../neon_lints
