--- a/packages/dynamite/pubspec.yaml
+++ b/packages/dynamite/pubspec.yaml
@@ -7,9 +7,10 @@ topics:
   - openapi
   - codegen
   - build-runner
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   build: ^2.0.0
@@ -35,7 +36,5 @@ dev_dependencies:
   built_value_generator: ^8.9.5
   built_value_test: ^8.9.5
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../neon_lints
   test: ^1.25.15
