--- a/packages/interceptor_http_client/pubspec.yaml
+++ b/packages/interceptor_http_client/pubspec.yaml
@@ -2,16 +2,15 @@ name: interceptor_http_client
 description: A http client with request and response interceptors.
 version: 0.1.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   built_collection: ^5.0.0
   cookie_store:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/cookie_store
+    path: ../cookie_store
   http: ^1.0.0
   meta: ^1.0.0
 
@@ -23,7 +22,5 @@ dev_dependencies:
       ref: 531d3e587c3214ad07bed1f52fac3f01112bc1ed
   mocktail: ^1.0.4
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../neon_lints
   test: ^1.25.15
