--- a/packages/neon_framework/packages/account_repository/pubspec.yaml
+++ b/packages/neon_framework/packages/account_repository/pubspec.yaml
@@ -2,9 +2,10 @@ name: account_repository
 description: Data repository for the neon account management.
 version: 0.1.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
   flutter: ^3.27.0
 
 dependencies:
@@ -15,13 +16,9 @@ dependencies:
   http: ^1.2.2
   meta: ^1.0.0
   neon_framework:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework
+    path: ../..
   neon_http_client:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework/packages/neon_http_client
+    path: ../neon_http_client
   nextcloud: ^8.1.0
   rxdart: ^0.28.0
 
@@ -35,6 +32,4 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^1.0.4
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
