--- a/packages/neon_framework/packages/neon_storage/pubspec.yaml
+++ b/packages/neon_framework/packages/neon_storage/pubspec.yaml
@@ -2,16 +2,15 @@ name: neon_storage
 description: Storage management and abstractions for the neon framework.
 version: 0.1.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   built_collection: ^5.0.0
   cookie_store:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/cookie_store
+    path: ../../../cookie_store
   http: ^1.0.0
   logging: ^1.0.0
   meta: ^1.0.0
@@ -23,12 +22,8 @@ dependencies:
 
 dev_dependencies:
   cookie_store_conformance_tests:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/cookie_store_conformance_tests
+    path: ../../../cookie_store/packages/cookie_store_conformance_tests
   mocktail: ^1.0.4
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   test: ^1.25.15
