--- a/packages/neon_framework/packages/notes_app/pubspec.yaml
+++ b/packages/neon_framework/packages/notes_app/pubspec.yaml
@@ -1,9 +1,10 @@
 name: notes_app
 version: 1.0.0
 publish_to: 'none'
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
   flutter: ^3.27.0
 
 dependencies:
@@ -20,9 +21,7 @@ dependencies:
   intl: ^0.19.0
   logging: ^1.0.0
   neon_framework:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework
+    path: ../..
   nextcloud: ^8.1.0
   queue: ^3.0.0
   rxdart: ^0.28.0
@@ -34,9 +33,7 @@ dev_dependencies:
   custom_lint: ^0.7.5
   go_router_builder: ^2.8.2
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   vector_graphics_compiler: ^1.1.16
 
 flutter:
