--- a/packages/neon_lints/pubspec.yaml
+++ b/packages/neon_lints/pubspec.yaml
@@ -2,9 +2,10 @@ name: neon_lints
 description: Linting package used in the nextcloud-neon project
 version: 1.0.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   analyzer: ^7.3.0
