--- a/melos.yaml
+++ b/melos.yaml
@@ -3,12 +3,6 @@ repository: https://github.com/nextcloud/neon
 
 sdkPath: .fvm/flutter_sdk
 
-bootstrap:
-  # It seems so that running "pub get" in parallel has some issues (like
-  # https://github.com/dart-lang/pub/issues/3404). Disabling this feature
-  # makes the CI much more stable.
-  runPubGetInParallel: false
-
 packages:
   - packages/*
   - packages/*/packages/*
@@ -19,14 +13,8 @@ ide:
     enabled: false
 
 command:
-  bootstrap:
-    hooks:
-      post: melos run format
   version:
     hooks:
-      preCommit: |
-        melos bootstrap
-        git add packages/neon_framework/example/pubspec.lock
       # Needed until https://github.com/invertase/melos/issues/591 is supported
       post: |
         git commit --amend --signoff --no-edit
@@ -44,7 +32,7 @@ scripts:
   test:dart: >
     melos exec --no-flutter --concurrency=1 --fail-fast --dir-exists=test -- "
       dart test --concurrency=$(nproc --all) --coverage=coverage &&
-      dart pub global run coverage:format_coverage --packages=.dart_tool/package_config.json --report-on=lib --lcov -o ./coverage/lcov.info -i ./coverage
+      dart pub global run coverage:format_coverage --packages=MELOS_ROOT_PATH/.dart_tool/package_config.json --report-on=lib --lcov -o ./coverage/lcov.info -i ./coverage
     "
   test:flutter: melos exec --flutter --concurrency=1 --fail-fast --dir-exists=test -- flutter test --concurrency=$(nproc --all) --coverage
   generate:neon:build_runner: melos exec --scope="neon*" --file-exists="build.yaml" -- dart run build_runner build --delete-conflicting-outputs && melos run format
