--- a/packages/dynamite/packages/dynamite_end_to_end_test/pubspec.yaml
+++ b/packages/dynamite/packages/dynamite_end_to_end_test/pubspec.yaml
@@ -2,9 +2,10 @@ name: dynamite_end_to_end_test
 publish_to: none
 description: Tests for dynamite. Not meant for publishing.
 version: 1.0.0
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   built_collection: ^5.0.0
@@ -21,7 +22,5 @@ dev_dependencies:
   built_value_test: ^8.9.5
   dynamite: ^0.5.0+1
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   test: ^1.25.15
