--- a/packages/neon_framework/packages/dashboard_app/pubspec.yaml
+++ b/packages/neon_framework/packages/dashboard_app/pubspec.yaml
@@ -1,9 +1,10 @@
 name: dashboard_app
 version: 1.0.0
 publish_to: 'none'
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
   flutter: ^3.27.0
 
 dependencies:
@@ -16,9 +17,7 @@ dependencies:
   go_router: ^15.0.0
   logging: ^1.0.0
   neon_framework:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework
+    path: ../..
   nextcloud: ^8.1.0
   rxdart: ^0.28.0
 
@@ -31,9 +30,7 @@ dev_dependencies:
   http: ^1.3.0
   mocktail: ^1.0.4
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   provider: ^6.1.4
   url_launcher_platform_interface: ^2.3.2
   vector_graphics_compiler: ^1.1.16
