--- a/packages/neon_framework/packages/notifications_push_repository/pubspec.yaml
+++ b/packages/neon_framework/packages/notifications_push_repository/pubspec.yaml
@@ -2,16 +2,15 @@ name: notifications_push_repository
 description: Data repository for the neon push notifications
 version: 0.1.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
   flutter: ^3.27.0
 
 dependencies:
   account_repository:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework/packages/account_repository
+    path: ../account_repository
   built_collection: ^5.0.0
   built_value: ^8.9.2
   collection: ^1.0.0
@@ -20,9 +19,7 @@ dependencies:
   logging: ^1.0.0
   meta: ^1.0.0
   neon_framework:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework
+    path: ../..
   nextcloud: ^8.1.0
   rxdart: ^0.28.0
   unifiedpush: ^6.0.1
@@ -39,8 +36,6 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^1.0.4
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   plugin_platform_interface: ^2.1.8
   unifiedpush_platform_interface: ^3.0.1
