--- a/packages/neon_framework/packages/sort_box/pubspec.yaml
+++ b/packages/neon_framework/packages/sort_box/pubspec.yaml
@@ -1,9 +1,10 @@
 name: sort_box
 version: 1.0.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   built_collection: ^5.0.0
@@ -11,7 +12,5 @@ dependencies:
 
 dev_dependencies:
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   test: ^1.25.15
