--- a/packages/neon_framework/packages/talk_app/pubspec.yaml
+++ b/packages/neon_framework/packages/talk_app/pubspec.yaml
@@ -1,9 +1,10 @@
 name: talk_app
 version: 1.0.0
 publish_to: 'none'
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
   flutter: ^3.27.0
 
 dependencies:
@@ -21,13 +22,9 @@ dependencies:
   logging: ^1.0.0
   meta: ^1.0.0
   neon_framework:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework
+    path: ../..
   neon_rich_text:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_framework/packages/neon_rich_text
+    path: ../neon_rich_text
   nextcloud: ^8.1.0
   rxdart: ^0.28.0
   timezone: ^0.10.0
@@ -43,9 +40,7 @@ dev_dependencies:
   http: ^1.3.0
   mocktail: ^1.0.4
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
   provider: ^6.1.4
   url_launcher_platform_interface: ^2.3.2
   vector_graphics_compiler: ^1.1.16
