--- a/packages/neon_lints/example/pubspec.yaml
+++ b/packages/neon_lints/example/pubspec.yaml
@@ -1,8 +1,9 @@
 name: neon_lints_test
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
   flutter: ^3.27.0
 
 dependencies:
@@ -16,6 +17,4 @@ dev_dependencies:
     sdk: flutter
   meta: ^1.11.0
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ..
