--- a/packages/nextcloud/packages/nextcloud_test_presets/pubspec.yaml
+++ b/packages/nextcloud/packages/nextcloud_test_presets/pubspec.yaml
@@ -1,9 +1,10 @@
 name: nextcloud_test_presets
 version: 1.0.0
 publish_to: none
+resolution: workspace
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.5.0
 
 dependencies:
   crypto: ^3.0.0
@@ -14,6 +15,4 @@ dependencies:
 
 dev_dependencies:
   neon_lints:
-    git:
-      url: https://github.com/nextcloud/neon
-      path: packages/neon_lints
+    path: ../../../neon_lints
