feat(nextcloud): Add support for password_policy
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,7 @@
 [submodule "external/emoji-metadata"]
 	path = external/emoji-metadata
 	url = https://github.com/googlefonts/emoji-metadata
+[submodule "external/nextcloud-password_policy"]
+	path = external/nextcloud-password_policy
+	url = https://github.com/nextcloud/password_policy.git
+	branch = v31.0.0
