ci: Make sure to run generate workflow when flutter version changes
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -24,6 +24,7 @@ jobs:
               - tool/**
               - packages/dynamite/**
               - packages/nextcloud/**
+              - .fvmrc
 
   dart:
     name: Dart
