ci: Also allow running on self-hosted runners
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.github/workflows/conventional_commits.yaml
+++ b/.github/workflows/conventional_commits.yaml
@@ -5,7 +5,7 @@ on:
 jobs:
   conventional-commits:
     name: Conventional commits
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest-low
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
