--- a/.github/workflows/spellcheck.yaml
+++ b/.github/workflows/spellcheck.yaml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   spellcheck:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest-low
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - uses: streetsidesoftware/cspell-action@ef95dc49d631fc2a9e9ea089ae2b2127b7c4588e # v6
