--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -9,7 +9,7 @@ concurrency:
 jobs:
   changes:
     name: Check changes
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest-low
     outputs:
       src: ${{ steps.changes.outputs.src}}
     steps:
@@ -28,7 +28,7 @@ jobs:
 
   dart:
     name: Dart
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     needs: changes
     if: needs.changes.outputs.src != 'false'
     steps:
@@ -63,7 +63,7 @@ jobs:
 
   openapi:
     name: OpenAPI
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     needs: changes
     if: needs.changes.outputs.src != 'false'
     steps:
