ci: Enable renovate for git submodules
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,6 +3,9 @@
   "extends": [
     "config:best-practices"
   ],
+  "git-submodules": {
+    "enabled": true
+  },
   "labels": [
     "dependencies"
   ],
