ci: Disable renovate digest updates for git submodules
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -52,6 +52,11 @@
       "enabled": false
     },
     {
+      "matchManagers": ["git-submodules"],
+      "matchUpdateTypes": ["digest"],
+      "enabled": false
+    },
+    {
       "matchManagers": ["pub"],
       "matchPackageNames": ["timezone"],
       "rangeStrategy": "bump",
